refactor: soulbinding cooldown to use custom data object